compiler/tools/fpp-check/test/invalid_symbols/constant_as_qualifier.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/invalid_symbols/constant_as_qualifier.fpp: 2.14
constant b = a.c
             ^
error: invalid symbol a: not a qualifier
symbol is defined here:
[ local path prefix ]/compiler/tools/fpp-check/test/invalid_symbols/constant_as_qualifier.fpp: 1.1
constant a = 0
^
